# ECHOES

./: .gitignore  .zenodo.json  CITATION.cff  DATA.md  README.md  environment.yml  pyproject.toml
apps/echoes-viewer/: README.md  app.js  astrolinks.js  contextmenu.js  index.html  loader.js  styles.css
data/: README.md  fetch_boss.py  fetch_cf4.py  fetch_cmass_targets.py  fetch_hyperleda.py  fetch_manticore.py  fetch_patchy.py  fetch_sga.py  make_mangle_randoms.py
data/local/: README.md
data_release/: GRAPHGP_JULIA_PRODUCTION_PERFORMANCE.md  README.md  SHA256SUMS  cmass_south_posterior.npz  cmass_south_posterior_generative.npz  draw_samples.py  zenodo_metadata.json
data_release/boss_lgcp_julia/: .gitignore  COVARIANCE.md  DIAGNOSTICS.md  README.md
data_release/contiguous/: inpaint_seed_0000.npz  inpaint_seed_0001.npz  inpaint_seed_0002.npz  inpaint_seed_0003.npz  manifest.json
data_release/local/: local_2mpp_manifest.json  local_2mpp_observed.npz  local_2mpp_zoa_mcmc0.npz  local_2mpp_zoa_mcmc1.npz  local_2mpp_zoa_mcmc2.npz
data_release/local_graphgp/: README.md
docs/: adding_a_survey.md  index.html  local_neighborhood.md  method.md  report.html  report_knn2d.html
docs/figs/: clpair.vsz  colorz.vsz  coupling.vsz  inpaint_gallery.vsz  local_completion.vsz  mask.vsz  missing.vsz  photoz.vsz
docs/packs/: packs.json
docs/tutorials/: 01_draw_samples.ipynb  README.md
echoes/: __init__.py  boss_mock_columns.py  cli.py  clustering.py  clustering_measure.py  completion.py  density_transform.py  derived.py  distance.py  field_grid.py  field_kernel.py  field_posterior.py  fieldpost.py  fill_footprint.py  generative.py  geometry.py  graphgp_backend.py  graphgp_field.py  graphgp_julia.py  inpaint.py  inpaint_field.py  kernel_mle.py  knn2d_field.py  local_completion.py  local_field_graphgp.py  ls_corrfunc.py  mock_systematics.py  nongauss_lgcp.py  perf.py  photoz.py  pit.py  posterior.py  randoms.py  selection_coupling.py  selection_model.py  sp_maps.py  systematics.py
paper/: boss_completion_apj_draft.tex  boss_completion_refs.bib  emulateapj.cls
pipeline/: _pack_io.py  boss_selection.py  build_boss_covariance.py  build_boss_lgcp_catalogs.py  build_conditional_covariance.py  build_conditional_covariance_field.py  build_contiguous_release.py  build_local_graphgp_field.py  build_local_release.py  build_local_veusz_figure.py  build_local_viewer.py  build_local_viewer_fork.py  build_pack.py  build_patchy_covariance.py  build_release.py  build_report.py  build_report_knn2d.py  build_texture_atlas.py  build_viewer_bundle.py  compare_covariances.py  deposit_zenodo.py  diag_multifrac_vs_cf.py  diag_tierA.py  rebuild_pymangle.sh  report_figures.py
tests/: test_astrolinks.js  test_build_pack.py  test_contiguous.py  test_copula.py  test_derived.py  test_draw.py  test_field_posterior.py  test_field_posterior_vecchia.py  test_fieldpost.py  test_galaxy_geometry.py  test_generative.py  test_graphgp_julia_aniso.py  test_graphgp_julia_parity.py  test_imports.py  test_inpaint_field.py  test_inpaint_foundations.py  test_kernel_mle.py  test_knn2d.py  test_loader_fetch_order.js  test_local_completion.py  test_local_field_graphgp.py  test_local_viewer.py  test_no_legacy.py  test_photometry.py  test_pick_nearest.js  test_provenance_viz.py  test_selection_model.py  test_systematics.py  test_viewer_bundle.py  test_xr_locomotion.js
tools/: set_doi.py  veusz_vsz.py  viz_provenance.py
validation/: calibration.py  calibration_highorder.py  completion_copula_prototype.py  completion_covariance_shape.py  copula_covariance_check.py  cosmology_consistency.py  dropin_uniform_randoms.py  dust_correlation.py  fieldpost_calibration.py  fieldpost_vs_density.py  fieldpost_vs_nifty.py  graphgp_cosmology_invariance.py  graphgp_truth_recovery.py  graphgp_vs_knn.py  higher_order.py  inpaint_clustering.py  inpaint_comparison.py  inpaint_recovery.py  inpaint_uniformity.py  knn2d_closure.py  knn2d_inpaint.py  knn2d_vs_engines.py  knn2d_zaccuracy.py  local_contrast.py  nifty_calibration.py  nifty_toy.py  object_pit.py  photoz_calibration.py  pit_breakdown.py  pit_closepair_prototype.py  pit_photoz_prototype.py  property_recovery.py  randoms_weight_map.py  selection_model_check.py  sensitivity.py  sp_cross_power.py  sp_null_tests.py  sp_weight_baseline.py  spec_incompleteness_null.py  systot_gradient.py  (+4 more)
(+29 files in other folders)
