[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echoes"
version = "0.1.0"
description = "ECHOES: Equal-weight Completed Hypothetical Observation Ensembles — survey-ready posterior samples of completed galaxy catalogs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Tom Abel", email = "tabel@stanford.edu"}]
keywords = ["cosmology", "galaxy surveys", "large-scale structure", "BOSS", "astrostatistics"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
# Core: the released posterior sampler is NumPy-only. Rebuilding the posterior,
# measuring clustering, fetching survey inputs, and report generation are extras.
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
# FITS output from echoes-draw / data_release/draw_samples.py.
fits = ["astropy>=5.3"]
# Rebuilding the BOSS release and running validation scripts.
pipeline = ["scipy>=1.10", "astropy>=5.3", "healpy>=1.16", "matplotlib>=3.7", "numba>=0.58"]
# Standard projected/multipole clustering measurements (Corrfunc).
clustering = ["scipy>=1.10", "astropy>=5.3", "Corrfunc>=2.5", "numba>=0.58"]
# graphGP conditional-field engine (optional, correlated posterior).
graphgp = [
  "scipy>=1.10", "astropy>=5.3", "healpy>=1.16",
  "graphgp @ git+https://github.com/yipihey/graphgp@hierarchical-chunked-generation",
  "jax>=0.4", "h5py>=3.8",
]
# NIFTy field-level inference engine (nifty8.re / jax): learned power spectrum,
# Poisson-lognormal likelihood, geoVI — the parallel cross-check of the graphGP
# conditional field posterior.
nifty = ["nifty8>=8.5", "jax>=0.4", "optax>=0.2"]
# One-time uniform-randoms generation from the survey mangle mask.
mask = ["pymangle>=0.9.4"]
# Fetching imaging targets / Gaia bright stars.
fetch = ["astropy>=5.3", "astroquery>=0.4.7"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/yipihey/ECHOES"
Report = "https://yipihey.github.io/ECHOES/report.html"
Repository = "https://github.com/yipihey/ECHOES"

[project.scripts]
echoes-draw = "echoes.cli:draw_main"

[tool.setuptools.packages.find]
include = ["echoes*"]
